tests/errors/erro_invalid_op.lua
function void main()
    local x : integer = 10 + "20"; -- Erro: + espera numeros
end
